--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 DISCORD_TOKEN=
 MONGO_TOKEN=
 GIPHY_TOKEN=
-WEBHOOK_ID=
-WEBHOOK_TOKEN=
-DISCORD_ID=
+WEBHOOK_ID=1111521016796168192
+WEBHOOK_TOKEN=1111521016796168192
+DISCORD_ID=1111521016796168192
 
 # Not neccessary variables
 # Wondering how to get these? Check out https://github.com/CorwinDev/Discord-Bot#requirements
