--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DISCORD_TOKEN=
-MONGO_TOKEN=
+MONGO_TOKEN=mongodb+srv://sub:itspossibler@cluster0.xbflmtx.mongodb.net/?retryWrites=true&w=majority
 GIPHY_TOKEN=
 WEBHOOK_ID=1111521016796168192
 WEBHOOK_TOKEN=1111521016796168192
