--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ TOPGG_TOKEN=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 LAVALINK_HOST=lava.link
-LAVALINK_PASSWORD=I'm a secret
+LAVALINK_PASSWORD=NitrixEXE OP
 LAVALINK_PORT=80
 LAVALINK_SECURE=false
 OPENAI= 
