--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DISCORD_TOKEN=
 MONGO_TOKEN=mongodb+srv://sub:itspossibler@cluster0.xbflmtx.mongodb.net/?retryWrites=true&w=majority
-GIPHY_TOKEN=
+GIPHY_TOKEN=fVOXbfcBdwPBcdbkW8fXWpovxitLDb4K
 WEBHOOK_ID=1111521016796168192
 WEBHOOK_TOKEN=1111521016796168192
 DISCORD_ID=1111521016796168192
