--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DISCORD_ID=1111521016796168192
 DISCORD_STATUS="Listening to meself, I'm a AssistAura"
 RADIO=
 TOPGG_TOKEN=
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIENT_ID=bf5ee2a72bae40ffadc71a47280e5ff9
+SPOTIFY_CLIENT_SECRET=053469ffeb3844079fab734ebf3090c2
 LAVALINK_HOST=lava.link
 LAVALINK_PASSWORD=NitrixEXE OP
 LAVALINK_PORT=80
